added link to logo

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -71,7 +71,7 @@
 				src="images/header-background.png"
 				alt="header-img"
 			/>
-			<a class="logo-img-link" href="#">
+			<a class="logo-img-link" href="https://assist-u.herokuapp.com/">
 				<img
 					src="/images/helpingHands.png"
 					width="50"
