--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -30,14 +30,14 @@
 		<meta property="og:locale" content="hi_IN" />
 		<meta
 			property="og:image"
-			content="https://github.com/chingu-voyages/v10-geckos-team-14/blob/master/public/mstile-150x150.png?raw=true"
+			content="https://github.com/chingu-voyages/v10-geckos-team-14/blob/master/public/images/helpingHands-300-200.png?raw=true"
 		/>
 		<meta
 			property="image"
-			content="https://github.com/chingu-voyages/v10-geckos-team-14/blob/dev/public/images/helpingHands-300-200.png?raw=true"
+			content="https://github.com/chingu-voyages/v10-geckos-team-14/blob/master/public/images/helpingHands-300-200.png?raw=true"
 		/>
 
-		<title>Assist-U | On-Demand Household and Personal Services</title>
+		<title>AssistU | On-Demand Household and Personal Services</title>
 		<!-- favicon -->
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
