--- a/views/booking.ejs
+++ b/views/booking.ejs
@@ -12,7 +12,7 @@
 			<h3 class=" sec-title text-left">What</h3>
 			<p>Please Pick a Fixer from the list.</p>
 			<br/>
-			<form action="/selectedFixer" method="POST" id="selectFixerForm">
+			<form action="/selectedFixer" method="post" id="selectFixerForm">
 				<input type="hidden" name="selectedFixer" id="fixerInput">
 		<%	for(var i=0; i<fixerData.length; i+=3) { %>
 				
@@ -24,7 +24,7 @@
 							<p class="card-text"><%= fixerData[i].fixerDescription %></p>
 						</div>
 						  <div class="card-footer bg-light" style="border-radius: 0 0 3rem 3rem">
-							  <h5><%= fixerData[i].fixerFee %>/hour</h5>
+							  <h5>$ <%= fixerData[i].fixerFee %>/hour</h5>
 							  <p class="card-text"><small class="text-muted">User Ratings: <%= fixerData[i].fixerRating%></small></p>
 							</div>
 						</div>
@@ -36,7 +36,7 @@
 							<p class="card-text"><%= fixerData[i+1].fixerDescription %></p>
 						</div>
 						  <div class="card-footer bg-light" style="border-radius: 0 0 3rem 3rem">
-								<h5><%= fixerData[i+1].fixerFee %>/hour</h5>
+								<h5>$ <%= fixerData[i+1].fixerFee %>/hour</h5>
 								<p class="card-text"><small class="text-muted">User Ratings: <%= fixerData[i+1].fixerRating%></small></p>
 							  </div>
 						</div>
@@ -49,7 +49,7 @@
 							<p class="card-text"><%= fixerData[i+2].fixerDescription %></p>
 						</div>
 						  <div class="card-footer bg-light" style="border-radius: 0 0 3rem 3rem">
-								<h5><%= fixerData[i+2].fixerFee %>/hour</h5>
+								<h5>$ <%= fixerData[i+2].fixerFee %>/hour</h5>
 								<p class="card-text"><small class="text-muted">User Ratings: <%= fixerData[i+2].fixerRating%></small></p>
 							  </div>
 						</div>
@@ -101,7 +101,6 @@
 							class="form-control"
 							id="inputState"
 							placeholder="State Initials"
-							max="2"
 							name="state"
 						/>
 					</div>
