correct booking form funtionality and save the data to db fetching the details of selected fixer.

--- a/views/booking.ejs
+++ b/views/booking.ejs
@@ -153,10 +153,12 @@
 					</div>
 					<div class="form-group col-lg-2">
 						<!-- <label for="inputHours"></label> -->
-						<input type="number" class="form-control" id="inputHours" placeholder="Hours" name="hours" />
+						<!-- <input type="number" class="form-control" id="inputHours" placeholder="Hours" name="hours" />
 						<small id="totalHours" class="form-text" style="color: #8d5a97;"
 							>Total Requested Hours</small
-						>
+						> -->
+						<input type="hidden" class="form-control" id="inputHours" name="hours" />
+						<p class="timeDiff" style="margin:0.5rem 0rem"></p>
 					</div>
 				</div>
 				<br />
