seperate header partial

--- a/views/thanks.ejs
+++ b/views/thanks.ejs
@@ -1,4 +1,5 @@
 <%- include("partials/header") -%>
+<%- include("partials/navbar") -%>
 <div class="thanks-center">
     <h2 class="display-4">Thank you for your message!</h2>
     <p class="lead">We really appreciate your interest in our services. One of our representatives will be in touch with you soon.</p>
