--- a/views/booking.ejs
+++ b/views/booking.ejs
@@ -1,4 +1,5 @@
 <%- include("partials/header") -%>
+<%- include("partials/navbar") -%>
 <!-- booking section begins -->
 <br /> <br />
 <h1><%= serviceType %></h1>
