--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,5 @@
 <%- include("partials/header") -%>
+<%- include("partials/navbar") -%>
 
 <!-- service section begins -->
 <section class="container services-section text-center">
