--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,3 +1,6 @@
 <%- include("partials/header") -%>
-
-<%- include("partials/footer") -%>
+<img src="images/SignUp-Bkgd.png" alt="login-bg" style="position: absolute; top:0; left:0; z-index: -1;" class="login-bk-img">
+<div class="register-head">
+<h1>Maximize Your Time</h1>
+</div>
+<!-- <%- include("partials/footer") -%> -->
