--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,18 +1,75 @@
-<%- include("partials/navbar") -%>
+<%- include("partials/header") -%>
 
 <!-- login section begins -->
-<br />
-<br />
-<br />
 <img
 	class="login-bk-img align-left"
 	id="login-bk-img"
 	src="images/Login-Bkgd.png"
 	alt="color and shape background"
 />
-<div class="container login-sec">
-	<h1 class="text- center">Maximize Your Time</h1>
-	<div class="row"></div>
+
+<div class="row title-row">
+		<h1 class="sec-title login-sec-title">
+			Maximize <br />Your<br />
+			Time
+		</h1>
+  </div>
+  <br/>
+  <br/>
+
+<div class="container login-sec text-center">
+
+	<div class="row">
+		<div class="container login-box text-left">
+			<br />
+			<h3>Login your account</h3>
+			<form>
+				<div class="form-group ">
+					<label for="exampleInputEmail1">Email</label>
+					<input
+						type="email"
+						class="form-control"
+						id="exampleInputEmail1"
+						aria-describedby="emailHelp"
+						placeholder="Your Email"
+					/>
+					<small id="emailHelp" class="form-text text-muted"></small>
+				</div>
+				<div class="form-group">
+					<label for="exampleInputPassword1">Password</label>
+					<input
+						type="password"
+						class="form-control"
+						id="exampleInputPassword1"
+						placeholder="Your Password"
+					/>
+				</div>
+				<div class="row-btn text-center">
+					<button
+						type="submit"
+						class="btn btn-lg btn-outline-warning"
+						style="border: 1.5px #F9D276 solid; font-family: 'Fredoka One', cursive; color: #63032e; margin:1.3rem 0; border-radius: 1rem; width: 7rem;"
+					>
+						Register
+					</button>
+					<button
+						type="submit"
+						class="btn btn-lg btn-warning"
+						style="background-color: #F9D276; font-family: 'Fredoka One', cursive; color: #63032e; margin:1.3rem 0; border-radius: 1rem; width: 8rem;"
+					>
+						Login
+					</button>
+					<p>
+						<a
+							href="#"
+							style="font-family: 'Fredoka One', cursive; color: #63032e;"
+							>Forget Password</a
+						>
+					</p>
+				</div>
+			</form>
+		</div>
+	</div>
 </div>
 <br />
 
