register page frame

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -38,6 +38,8 @@
 		/>
 
 		<title>AssistU | On-Demand Household and Personal Services</title>
+		<!-- font-awesome -->
+		<link href="css/fa-all.css" rel="stylesheet" />
 		<!-- favicon -->
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
@@ -64,3 +66,5 @@
 	</head>
 
 	<body>
+		<div id="page-container">
+			<div id="content-wrap">
