--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,4 @@
 /* Overall App Styling */
-
 body {
 	background-color: #f1f7f0;
 	color: #63032e;
@@ -17,6 +16,13 @@ h6 {
 }
 hr {
 	width: 10%;
+}
+input{
+	border-radius: 2rem !important;
+}
+textarea{
+	border-radius: 2rem !important;
+	padding-left: 1.5rem !important;
 }
 
 /*! Landing Page */
@@ -166,6 +172,8 @@ section.works-sec {
 }
 ::placeholder {
 	color: #8d5a97 !important;
+	padding-top:1rem !important;
+	padding-bottom:1rem !important;
 	font-family: 'Domine', serif !important;
 }
 
@@ -224,7 +232,7 @@ section.works-sec {
 	border-radius: 2.5rem;
 	background-color: #e1e3f0;
   }
-.card{
+.card-for-fixer{
 	border-radius: 3rem;
 	margin-bottom: 1rem !important;
 }
@@ -248,39 +256,41 @@ section.works-sec {
 	flex-direction: column;
 }
 /*! Footer Section*/
-.footer {
-	position: relative;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	margin-top: 10.5rem;
-	margin-bottom: 0;
-	font-family: 'Fredoka One', cursive;
-}
-.footer-img {
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	margin-bottom: 0rem;
-	z-index: -1;
-	width: 100%;
-	height: 270%;
-}
 .footer-copyright-text {
 	margin: 0;
 	padding: 0 0 0.2rem 0;
 	font-size: 1.03rem;
 	color: #63032e;
+} 
+#page-container {
+	position: relative;
+	min-height: 100vh;
+  }
+#content-wrap {
+	padding-bottom: 20.5rem;    /* Footer height */
 }
+#footer {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 5.5rem;		
+	font-family: 'Fredoka One', cursive;           
+  }
+.footer-img{
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 270%;
+	z-index: -1;	
+}
+  
 /* .mid-text{
 	position: absolute;
 	left: 14rem;
 } */
 .social-icons {
-	margin-top: 1.7rem !important;
-	/* position: absolute;
-	right: 0; */
+	margin-top: 0.7rem !important;
 }
 
 /*! Thanks page */
@@ -300,23 +310,46 @@ section.works-sec {
 /* register page */
 .register-head{
 	position: absolute;
-	top: 10%;
-	left: 0;
-	width: 30%;
+	top: 6%;
+	left: 7%;
+	width: 15%;
 	text-align: center; 
 }
-.login-bk-img{
+.login-bg-img{
 	width: 40%;
-	height: 50%
+	height: auto;
 }
+.reg-quote{
+	line-height: 1.5;
+	font-size: 3rem;
+}
+.placeholder-text{
+	padding-left: 2.5rem;
+}
+.placeholder-div{
+	position: relative;
+}
+i{
+	position: absolute;
+	top:2.45rem;
+	left: 2rem;
+}
+.label-for-register{
+	font-family: 'Fredoka One', cursive;
+}
+.registration-card{
+	width:28%; 
+	padding: 0 3%;
+	border-radius: 1rem;
+	margin: 15rem auto 5rem;
+	background-color: #e1e3f0;
+}
+
 /*! Media Queries */
 /* all screens smaller than desktop */
 @media (max-width: 576px) {
 	.footer-copyright-text {
 		font-size: 0.7rem;
-	}
-	.footer-img {
-		height: 250%;
 	}
 	.line {
 		visibility: hidden;
@@ -324,9 +357,6 @@ section.works-sec {
 	}
 	.work-text {
 		padding: 0 4rem;
-	}
-	.f1 {
-		padding-left: 2.6rem;
 	}
 	.upload-image-box {
 		text-align: center;
@@ -355,6 +385,9 @@ section.works-sec {
 	}
 	.upload-image-box {
 		margin-top: 9rem;
+	}
+	.f1{
+		margin-left: 3rem;
 	}
 }
 /* others */
@@ -405,20 +438,16 @@ section.works-sec {
 		width: -2%;
 	}
 }
-@media (max-width: 1900px) and (min-width: 1800px) {
-	.footer {
-		position: relative;
-		bottom: 0;
-		left: 0;
-		right: 0;
-		margin-top: 25.5rem;
-		margin-bottom: 0;
-		font-family: 'Fredoka One', cursive;
-	}
-}
+/* extra large screen */
+/* @media (max-width: 1900px) and (min-width: 1800px) {
+	
+} */
 @media (max-width: 1030px) and (min-width: 1000px) {
 	.line-4-hide {
 		visibility: hidden;
 		width: 10% !important;
+	}
+	.f1{
+		margin-left: 5rem;
 	}
 }​
